--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -54,8 +54,7 @@
             Graduated from 2015, National University of Bioresources and natural
             history of Ukraine
           </h4>
-          <input type="checkbox" class="read-more-state" id="post-1" />
-          <p class="item__feedback-author-text read-more-wrap">
+          <p class="item__feedback-author-text">
             In a short time with Elena, I mastered grammar and replenished my
             completely empty vocabulary. From the first lesson I realized that I
             was on my plate. Elena and I became friends because she was really
@@ -67,10 +66,8 @@
               accusamus rem quos voluptatibus odio atque.</span
             >
           </p>
-          <label
-            for="post-1"
-            class="item__feedback-button read-more-trigger"
-          ></label>
+          <span class="item__feedback-button show">Read more</span>
+          <span class="item__feedback-button hide">Read less</span>
         </div>
       </article>
       <article class="slider__item">
@@ -125,8 +122,7 @@
             Graduated from 2015, National University of Bioresources and natural
             history of Ukraine
           </h4>
-          <input type="checkbox" class="read-more-state" id="post-2" />
-          <p class="item__feedback-author-text read-more-wrap">
+          <p class="item__feedback-author-text">
             In a short time with Elena, I mastered grammar and replenished my
             completely empty vocabulary. From the first lesson I realized that I
             was on my plate. Elena and I became friends because she was really
@@ -138,10 +134,8 @@
               accusamus rem quos voluptatibus odio atque.</span
             >
           </p>
-          <label
-            for="post-2"
-            class="item__feedback-button read-more-trigger"
-          ></label>
+          <span class="item__feedback-button show">Read more</span>
+          <span class="item__feedback-button hide">Read less</span>
         </div>
       </article>
       <article class="slider__item">
@@ -196,8 +190,7 @@
             Graduated from 2015, National University of Bioresources and natural
             history of Ukraine
           </h4>
-          <input type="checkbox" class="read-more-state" id="post-3" />
-          <p class="item__feedback-author-text read-more-wrap">
+          <p class="item__feedback-author-text">
             In a short time with Elena, I mastered grammar and replenished my
             completely empty vocabulary. From the first lesson I realized that I
             was on my plate. Elena and I became friends because she was really
@@ -209,10 +202,8 @@
               accusamus rem quos voluptatibus odio atque.</span
             >
           </p>
-          <label
-            for="post-3"
-            class="item__feedback-button read-more-trigger"
-          ></label>
+          <span class="item__feedback-button show">Read more</span>
+          <span class="item__feedback-button hide">Read less</span>
         </div>
       </article>
       <article class="slider__item">
@@ -267,8 +258,7 @@
             Graduated from 2015, National University of Bioresources and natural
             history of Ukraine
           </h4>
-          <input type="checkbox" class="read-more-state" id="post-4" />
-          <p class="item__feedback-author-text read-more-wrap">
+          <p class="item__feedback-author-text">
             In a short time with Elena, I mastered grammar and replenished my
             completely empty vocabulary. From the first lesson I realized that I
             was on my plate. Elena and I became friends because she was really
@@ -280,10 +270,8 @@
               accusamus rem quos voluptatibus odio atque.</span
             >
           </p>
-          <label
-            for="post-4"
-            class="item__feedback-button read-more-trigger"
-          ></label>
+          <span class="item__feedback-button show">Read more</span>
+          <span class="item__feedback-button hide">Read less</span>
         </div>
       </article>
       <article class="slider__item">
@@ -338,8 +326,7 @@
             Graduated from 2015, National University of Bioresources and natural
             history of Ukraine
           </h4>
-          <input type="checkbox" class="read-more-state" id="post-5" />
-          <p class="item__feedback-author-text read-more-wrap">
+          <p class="item__feedback-author-text">
             In a short time with Elena, I mastered grammar and replenished my
             completely empty vocabulary. From the first lesson I realized that I
             was on my plate. Elena and I became friends because she was really
@@ -351,10 +338,8 @@
               accusamus rem quos voluptatibus odio atque.</span
             >
           </p>
-          <label
-            for="post-5"
-            class="item__feedback-button read-more-trigger"
-          ></label>
+          <span class="item__feedback-button show">Read more</span>
+          <span class="item__feedback-button hide">Read less</span>
         </div>
       </article>
       <article class="slider__item">
@@ -409,8 +394,7 @@
             Graduated from 2015, National University of Bioresources and natural
             history of Ukraine
           </h4>
-          <input type="checkbox" class="read-more-state" id="post-6" />
-          <p class="item__feedback-author-text read-more-wrap">
+          <p class="item__feedback-author-text">
             In a short time with Elena, I mastered grammar and replenished my
             completely empty vocabulary. From the first lesson I realized that I
             was on my plate. Elena and I became friends because she was really
@@ -422,10 +406,8 @@
               accusamus rem quos voluptatibus odio atque.</span
             >
           </p>
-          <label
-            for="post-6"
-            class="item__feedback-button read-more-trigger"
-          ></label>
+          <span class="item__feedback-button show">Read more</span>
+          <span class="item__feedback-button hide">Read less</span>
         </div>
       </article>
       <article class="slider__item">
@@ -480,8 +462,7 @@
             Graduated from 2015, National University of Bioresources and natural
             history of Ukraine
           </h4>
-          <input type="checkbox" class="read-more-state" id="post-7" />
-          <p class="item__feedback-author-text read-more-wrap">
+          <p class="item__feedback-author-text">
             In a short time with Elena, I mastered grammar and replenished my
             completely empty vocabulary. From the first lesson I realized that I
             was on my plate. Elena and I became friends because she was really
@@ -493,10 +474,8 @@
               accusamus rem quos voluptatibus odio atque.</span
             >
           </p>
-          <label
-            for="post-7"
-            class="item__feedback-button read-more-trigger"
-          ></label>
+          <span class="item__feedback-button show">Read more</span>
+          <span class="item__feedback-button hide">Read less</span>
         </div>
       </article>
     </div>
