--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,9 +1,10 @@
 <section class="problems section">
   <div class="container">
-    <h2 class="problems__title">
-      The&nbsp;main&nbsp;problems of&nbsp;students in&nbsp;English&nbsp;UPE, which we&nbsp;<span class="active">help</span>&nbsp;to&nbsp;solve
+    <h2 class="problems__title animate__animated animate__fadeInTopLeft">
+      The&nbsp;main&nbsp;problems of&nbsp;students in&nbsp;English&nbsp;UPE,
+      which we&nbsp;<span class="active">help</span>&nbsp;to&nbsp;solve
     </h2>
-    <ul class="problems__list">
+    <ul class="problems__list animate__animated animate__flipInX">
       <li class="problems__item">Grammar</li>
       <li class="problems__item">Inability to understand spoken English</li>
       <li class="problems__item">Stingy vocabulary for writing an essay</li>
