--- a/src/partials/how-we-do.html
+++ b/src/partials/how-we-do.html
@@ -1,9 +1,8 @@
-
 <section class="howdoit section">
   <div class="container">
     <h2 class="howdoit__title title">How do we do it</h2>
     <ul class="howdoit__list list">
-      <li class="howdoit__item">
+      <li class="howdoit__item animate__animated animate__zoomIn">
         <svg class="howdoit__icon" width="55" height="55">
           <use href="./images/how-we-do.svg#howdoit1"></use>
         </svg>
@@ -15,7 +14,7 @@
           </p>
         </div>
       </li>
-      <li class="howdoit__item">
+      <li class="howdoit__item animate__animated animate__zoomIn">
         <svg class="howdoit__icon" width="55" height="55">
           <use href="./images/how-we-do.svg#howdoit2"></use>
         </svg>
@@ -27,7 +26,7 @@
           </p>
         </div>
       </li>
-      <li class="howdoit__item">
+      <li class="howdoit__item animate__animated animate__zoomIn">
         <svg class="howdoit__icon" width="55" height="55">
           <use href="./images/how-we-do.svg#howdoit3"></use>
         </svg>
@@ -39,7 +38,7 @@
           </p>
         </div>
       </li>
-      <li class="howdoit__item">
+      <li class="howdoit__item animate__animated animate__zoomIn">
         <svg class="howdoit__icon" width="55" height="55">
           <use href="./images/how-we-do.svg#howdoit4"></use>
         </svg>
@@ -51,7 +50,7 @@
           </p>
         </div>
       </li>
-      <li class="howdoit__item">
+      <li class="howdoit__item animate__animated animate__zoomIn">
         <svg class="howdoit__icon" width="55" height="55">
           <use href="./images/how-we-do.svg#howdoit5"></use>
         </svg>
@@ -63,7 +62,7 @@
           </p>
         </div>
       </li>
-      <li class="howdoit__item">
+      <li class="howdoit__item animate__animated animate__zoomIn">
         <svg class="howdoit__icon" width="55" height="55">
           <use href="./images/how-we-do.svg#howdoit6"></use>
         </svg>
