--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -1,195 +1,204 @@
 .program {
-    position: relative;
-    background-color: var(--title-color);
-    padding-bottom: 70px;
-    
-    @include mq(desk){   
-        background-image: linear-gradient(var(--white-color), var(--white-color));
-        background-size: 100% 3px;
-        background-position: 0 227px;
-        background-repeat: no-repeat;
-    }
-    
-    &-title {
-        color: var(--white-color);
-        text-align: center;
-        padding-top: 50px;
-        margin-bottom: 30px;
+  position: relative;
+  background-color: var(--title-color);
+  padding-top: 50px;
+  padding-bottom: 70px;
 
-        @include mq(tab) {
-            text-align: left;
-        }
+  @include mq(tab) {
+    padding-top: 60px;
+  }
 
-        @include mq(desk) {
-            font-size: 46px;
-            line-height: 1.3;
-            margin-bottom: 106px;
-            
-        }
+  @include mq(desk) {
+    padding-top: 120px;
+    background-image: linear-gradient(var(--white-color), var(--white-color));
+    background-size: 100% 3px;
+    background-position: 0 242px;
+    background-repeat: no-repeat;
+  }
+
+  &-title {
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 1.3;
+    /* or 26px */
+
+    letter-spacing: 0.03em;
+    color: var(--white-color);
+    text-align: center;
+
+    margin-bottom: 30px;
+
+    @include mq(tab) {
+      margin-bottom: 52px;
+
+      font-size: 26px;
+      text-align: left;
     }
+
+    @include mq(desk) {
+      font-size: 46px;
+
+      margin-bottom: 58px;
+    }
+  }
 }
 
-.program{     
-        &-mob__img {
-            @media screen and (min-width: 767px) {
-                    display: none;
-                }
-            @media screen and (min-width: 200px) {
-                        width: 120px;
-                        position: absolute;
-                        bottom: -42px;
-                        right: -20px;
-                    }
-        }
+.program {
+  &-mob__img {
+    @media screen and (min-width: 767px) {
+      display: none;
+    }
+    @media screen and (min-width: 200px) {
+      width: 120px;
+      position: absolute;
+      bottom: -42px;
+      right: -20px;
+    }
+  }
 
-        &__img{
+  &__img {
+    @media screen and (max-width: 767px) {
+      display: none;
+    }
+    @include mq(tab) {
+      width: 374px;
+      position: absolute;
+      bottom: -66px;
+      right: -44px;
+    }
 
-                @media screen and (max-width: 767px) {
-                        display: none;
-                    }
-                @include mq(tab) {
-                    width: 374px;
-                    position: absolute;
-                    bottom: -66px;
-                    right: -44px;
-                }
-        
-                @include mq(desk) {
-                    width: 672px;
-                    position: absolute;
-                    bottom: -314px;
-                    left: -184px;
-                    z-index: 1;
-                }
-            }
-        }
+    @include mq(desk) {
+      width: 672px;
+      position: absolute;
+      bottom: -314px;
+      left: -184px;
+      z-index: 1;
+    }
+  }
+}
 
 .program-list {
+  position: relative;
+  @include mq(desk) {
+    display: flex;
+    padding-top: 48px;
+  }
+  @media screen and (max-width: 1365px) {
+    &__item {
+      margin-left: 74px;
+      border-left: 3px solid var(--white-color);
+      padding-left: 26px;
+      padding-bottom: 44px;
 
-    position: relative;
+      @media screen and (min-width: 1366px) {
+        position: relative;
+      }
+    }
+  }
+
+  &__border {
+    border-left: 3px solid transparent;
+  }
+
+  &__flex {
+    @media screen and (max-width: 1365px) {
+      position: relative;
+    }
+  }
+
+  @media screen and (max-width: 1365px) {
+    &__title::before {
+      content: ' ';
+      display: block;
+      position: absolute;
+      transform: translateX(-50%);
+      left: -28px;
+      top: -7px;
+      width: 12px;
+      height: 12px;
+      background-color: var(--accent-color);
+      border-radius: 50%;
+    }
+  }
+
+  @media screen and (min-width: 1366px) {
+    &__title::before {
+      content: ' ';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: auto;
+      // transform: translateY(-490%);
+      width: 12px;
+      height: 12px;
+      background-color: var(--accent-color);
+      border-radius: 50%;
+    }
+  }
+
+  &:nth-last-child(1) {
+    border-left: 3px solid transparent;
+  }
+
+  &__title {
+    color: var(--white-color);
+    text-transform: uppercase;
+
+    margin-bottom: 15px;
+
     @include mq(desk) {
-        display: flex;
+      font-size: 30px;
+
+      letter-spacing: 0.08em;
     }
-    @media screen and (max-width: 1365px) {
-        &__item {
-            margin-left: 74px;
-            border-left: 3px solid var(--white-color);
-            padding-left: 26px;
-            padding-bottom: 44px;
+  }
 
-            @media screen and (min-width: 1366px) {
-                position: relative;
-            }
-        }
+  &__headline {
+    color: var(--accent-color);
+    font-size: 12px;
+    line-height: calc(20 / 12);
+    margin-bottom: 8px;
+    margin-top: 5px;
+
+    @include mq(desk) {
+      font-size: 20px;
+      line-height: 1.65;
+      margin-top: 25px;
     }
+  }
 
-    &__border {
-        border-left: 3px solid transparent;
-    }
+  &__text {
+    color: var(--main-text-color);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: calc(20 / 12);
+    opacity: 0.5;
+    margin-right: 44px;
 
-    &__flex {
-        @media screen and (max-width: 1365px) {
-            position: relative;
-        }
-
-    }
-
-    @media screen and (max-width: 1365px) {
-        &__title::before {
-            content: " ";
-            display: block;
-            position: absolute;
-            transform: translateX(-50%);
-            left: -28px;
-            top: -7px;
-            width: 12px;
-            height: 12px;
-            background-color: var(--accent-color);
-            border-radius: 50%;
-        }
+    @include mq(tab) {
+      width: 150px;
     }
 
-    @media screen and (min-width: 1366px) {
-        &__title::before {
-            content: " ";
-            display: block;
-            position: absolute;
-            top: auto;
-            left: auto;
-            transform: translateY(-490%);
-            width: 12px;
-            height: 12px;
-            background-color: var(--accent-color);
-            border-radius: 50%;
-        }
+    @include mq(desk) {
+      width: 226px;
+      font-size: 18px;
+      line-height: 1.56;
     }
+  }
 
-    &:nth-last-child(1) {
-        border-left: 3px solid transparent;
-
+  &__tab {
+    @include mq(desk) {
+      margin-left: 0;
     }
-
-    &__title {
-        color: var(--white-color);
-        text-transform: uppercase;
-        line-height: 0;
-        margin-bottom: 15px;
-
-        @include mq(desk) {
-            font-size: 30px;
-            line-height: calc(28/30);
-            letter-spacing: 0.08em;
-        }
-    }
-
-    &__headline {
-        color: var(--accent-color);
-        font-size: 12px;
-        line-height: calc(20/12);
-        margin-bottom: 8px;
-        margin-top: 5px;
-
-        @include mq(desk) {
-            font-size: 20px;
-            line-height: 1.65;
-            margin-top: 25px;
-        }
-    }
-
-    &__text {
-        color: var(--main-text-color);
-        font-weight: 500;
-        font-size: 12px;
-        line-height: calc(20/12);
-        opacity: 0.5;
-        margin-right: 44px;
-
-        @include mq(tab) {
-            width: 150px;
-        }
-
-        @include mq(desk) {
-            width: 226px;
-            font-size: 18px;
-            line-height: 1.56;
-        }
-    }
-
-    &__tab {
-
-        @include mq(desk) {
-            margin-left: 0;
-        }
-    }
-
+  }
 }
 
 .flex {
-    @include mq(tab) {
-        display: flex;
-    }
+  @include mq(tab) {
+    display: flex;
+  }
 
-    @include mq(desk) {
-        display: block;
-    }
+  @include mq(desk) {
+    display: block;
+  }
 }
