add overflow hidden

--- a/src/sass/base/_basic-values.scss
+++ b/src/sass/base/_basic-values.scss
@@ -124,6 +124,11 @@ body {
   clip-path: inset(50%);
   margin: -1px;
 }
+
+.main {
+  overflow: hidden;
+}
+
 .active {
   color: var(--accent-color);
 }
