--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -21,7 +21,7 @@
             required pattern="^[a-zA-Z]+\s[a-zA-Z]+$"
             title="Please input name and last name"
           />
-          <span class="contacts-form-label">Имя&ast;</span>
+          <span class="contacts-form-label">Name&ast;</span>
         </label>
         <label class="contacts-form-field">
           <input
@@ -35,7 +35,7 @@
             required pattern="^[0-9]+$"
             title="Please input number in the format 380001234567"
           />
-          <span class="contacts-form-label">Телефон&ast;</span>
+          <span class="contacts-form-label">Phone&ast;</span>
         </label>
       </div>
 <div>
