--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -59,6 +59,8 @@
   text-transform: uppercase;
   color: var(--main-text-color);
 
+  transition: color var(--animation);
+
   &:hover,
   &:focus {
     color: var(--accent-color);
@@ -82,6 +84,9 @@
 }
 .menu__button {
   margin-left: auto;
+
+  transition: color var(--animation), background-color var(--animation);
+
   &:hover,
   &:focus {
     color: var(--white-color);
